unpackaged/main/default/objects/Opportunity/fields/Related_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunities (Related Opportunity)</relationshipLabel>
    <relationshipName>Related_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>