unpackaged/main/default/objects/Opportunity/fields/Related_Renewal_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Related_Renewal_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Associates add-on opp with the original renewal opportunity. Not applicable to other types of opps.</inlineHelpText>
    <label>Related Renewal Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Renewal Growth Opps</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>