unpackaged/main/default/objects/Opportunity/fields/Related_Renewal_Quote__c.field-meta.xml
<CustomField>
    <fullName>Related_Renewal_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Renewal Quote</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Opportunities (Related Renewal Quote)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>