unpackaged/main/default/objects/Opportunity/fields/Renewal_Growth_Amount__c.field-meta.xml
<CustomField>
    <fullName>Renewal_Growth_Amount__c</fullName>
    <label>Renewal Growth Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>