unpackaged/main/default/objects/Opportunity/fields/Renewing_Contract_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Renewing_Contract_End_Date__c</fullName>
    <formula>IF(ISBLANK(SBQQ__RenewedContract__c), Legacy_Renewing_Contract_End_Date__c, SBQQ__RenewedContract__r.EndDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Renewing Contract End Date</label>
    <type>Date</type>
</CustomField>