unpackaged/main/default/objects/Opportunity/fields/Request_Narrative_for_Finance_Review__c.field-meta.xml
<CustomField>
    <fullName>Request_Narrative_for_Finance_Review__c</fullName>
    <label>Request Narrative for Finance Review</label>
    <type>TextArea</type>
</CustomField>