unpackaged/main/default/objects/Opportunity/fields/Requested_CDN__c.field-meta.xml
<CustomField>
    <fullName>Requested_CDN__c</fullName>
    <label>Requested CDN</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>BYO CDN (Akamai)</fullName>
            </value>
            <value>
                <fullName>BYO CDN (Fastly)</fullName>
            </value>
            <value>
                <fullName>BYO CDN (Limelight)</fullName>
            </value>
            <value>
                <fullName>BYO CDN (Cloudfront)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>