unpackaged/main/default/objects/Opportunity/fields/Risk_Comments_Notes__c.field-meta.xml
<CustomField>
    <fullName>Risk_Comments_Notes__c</fullName>
    <label>Risk Comments/Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>