unpackaged/main/default/objects/Opportunity/fields/Risk_Reason__c.field-meta.xml
<CustomField>
    <fullName>Risk_Reason__c</fullName>
    <label>Risk Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bugs Risk</fullName>
            </value>
            <value>
                <fullName>Implementation Risk</fullName>
            </value>
            <value>
                <fullName>Product Risk - Enhancement Request</fullName>
            </value>
            <value>
                <fullName>Customer Readiness Risk</fullName>
            </value>
            <value>
                <fullName>Lack of Champion</fullName>
            </value>
            <value>
                <fullName>Sponsor Change</fullName>
            </value>
            <value>
                <fullName>Single-Threaded</fullName>
            </value>
            <value>
                <fullName>Disengaged/Non-responsive</fullName>
            </value>
            <value>
                <fullName>Commodity Relationship</fullName>
            </value>
            <value>
                <fullName>Usage Drop</fullName>
            </value>
            <value>
                <fullName>Support Ticket Drop</fullName>
            </value>
            <value>
                <fullName>Near Overages</fullName>
            </value>
            <value>
                <fullName>Product Risk - Roadmap Misalignment</fullName>
            </value>
            <value>
                <fullName>Sentiment Risk</fullName>
            </value>
            <value>
                <fullName>Support Risk</fullName>
            </value>
            <value>
                <fullName>Survey Response</fullName>
            </value>
            <value>
                <fullName>CSM Change</fullName>
            </value>
            <value>
                <fullName>Customer Reorg</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Non-Payment</fullName>
            </value>
            <value>
                <fullName>Pricing/Economics</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>