unpackaged/main/default/objects/Opportunity/fields/Risk_Status__c.field-meta.xml
<CustomField>
    <fullName>Risk_Status__c</fullName>
    <label>Risk Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>High - Logo</fullName>
            </value>
            <value>
                <fullName>High - Downgrade</fullName>
            </value>
            <value>
                <fullName>Medium - Logo</fullName>
            </value>
            <value>
                <fullName>Medium - Downgrade</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>