unpackaged/main/default/objects/Opportunity/fields/Sales_Strategy_to_Win__c.field-meta.xml
<CustomField>
    <fullName>Sales_Strategy_to_Win__c</fullName>
    <inlineHelpText>Can we Win (provide more Value) and what is our Sales Strategy to beat it?</inlineHelpText>
    <label>Sales Strategy to Win</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>