unpackaged/main/default/objects/Opportunity/fields/Services_Total__c.field-meta.xml
<CustomField>
    <fullName>Services_Total__c</fullName>
    <label>Services Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>