unpackaged/main/default/objects/Opportunity/fields/Solution_Design_Stage_Set_Date__c.field-meta.xml
<CustomField>
    <fullName>Solution_Design_Stage_Set_Date__c</fullName>
    <label>Solution Design Stage Set Date</label>
    <type>DateTime</type>
</CustomField>