unpackaged/main/default/objects/Opportunity/fields/Solution_Development__c.field-meta.xml
<CustomField>
    <fullName>Solution_Development__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Solution Development</label>
    <type>Checkbox</type>
</CustomField>