unpackaged/main/default/objects/Opportunity/fields/Solution_Document__c.field-meta.xml
<CustomField>
    <fullName>Solution_Document__c</fullName>
    <description>For the SE to define the solution document. Used together with the &quot;Solution Complete&quot; field.</description>
    <inlineHelpText>Provide the URL to the google drive folder containing the document. If not applicable, please type &#39;N/A&#39;</inlineHelpText>
    <label>Solution Document</label>
    <type>Url</type>
</CustomField>