unpackaged/main/default/objects/Opportunity/fields/Solution_Type__c.field-meta.xml
<CustomField>
    <fullName>Solution_Type__c</fullName>
    <label>Solution Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>App Experiences</fullName>
            </value>
            <value>
                <fullName>Content Syndication</fullName>
            </value>
            <value>
                <fullName>Events &amp; Communication</fullName>
            </value>
            <value>
                <fullName>Framework Wrappers</fullName>
            </value>
            <value>
                <fullName>Hosting &amp; Support</fullName>
            </value>
            <value>
                <fullName>Ingest &amp; Migration</fullName>
            </value>
            <value>
                <fullName>OTT</fullName>
            </value>
            <value>
                <fullName>Player Interactivity</fullName>
            </value>
            <value>
                <fullName>QA as a Service</fullName>
            </value>
            <value>
                <fullName>System Integration</fullName>
            </value>
            <value>
                <fullName>Technical Retainer</fullName>
            </value>
            <value>
                <fullName>Technology Strategy</fullName>
            </value>
            <value>
                <fullName>UX Design as a Service</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>