unpackaged/main/default/objects/Opportunity/fields/Source_of_Data__c.field-meta.xml
<CustomField>
    <fullName>Source_of_Data__c</fullName>
    <label>Source of Data</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MRSS</fullName>
            </value>
            <value>
                <fullName>CSV</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>