unpackaged/main/default/objects/Opportunity/fields/SOW_Needed__c.field-meta.xml
<CustomField>
    <fullName>SOW_Needed__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Please select this box a SOW will be needed in order to close this deal</inlineHelpText>
    <label>SOW Needed</label>
    <type>Checkbox</type>
</CustomField>