unpackaged/main/default/objects/Opportunity/fields/Stage_Previous_value__c.field-meta.xml
<CustomField>
    <fullName>Stage_Previous_value__c</fullName>
    <label>Stage - Previous value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>