unpackaged/main/default/objects/Opportunity/fields/Status_Complete_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Status_Complete_Date_Time__c</fullName>
    <label>Status Complete Date Time</label>
    <type>Date</type>
</CustomField>