unpackaged/main/default/objects/Opportunity/fields/SubReason_for_winloss__c.field-meta.xml
<CustomField>
    <fullName>SubReason_for_winloss__c</fullName>
    <label>Sub-Reason for Win / Loss</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Reason_for_Win_Loss__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Better solution, not worth the price</fullName>
            </value>
            <value>
                <fullName>Better solution, worth the price</fullName>
            </value>
            <value>
                <fullName>BGS/Services ability to create a highly custom solution</fullName>
            </value>
            <value>
                <fullName>BGS/Services cost too high</fullName>
            </value>
            <value>
                <fullName>Brightcove used on other teams in organization</fullName>
            </value>
            <value>
                <fullName>Challenging customer</fullName>
            </value>
            <value>
                <fullName>Change of company control</fullName>
            </value>
            <value>
                <fullName>Company-wide budget freezes or RIFS</fullName>
            </value>
            <value>
                <fullName>Contact not the ultimate buyer</fullName>
            </value>
            <value>
                <fullName>Customer non-payments</fullName>
            </value>
            <value>
                <fullName>Executive or board level relationships</fullName>
            </value>
            <value>
                <fullName>Expected deal size is too small</fullName>
            </value>
            <value>
                <fullName>Insufficient ROI</fullName>
            </value>
            <value>
                <fullName>Integrated into our tech stack</fullName>
            </value>
            <value>
                <fullName>Lack of solution completeness</fullName>
            </value>
            <value>
                <fullName>M&amp;A</fullName>
            </value>
            <value>
                <fullName>Missing tablestakes feature/unable to serve use case</fullName>
            </value>
            <value>
                <fullName>Non-responsive contact / Decision maker left</fullName>
            </value>
            <value>
                <fullName>Only one who could solve the problem / uniquely able to solve</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Poor buyer experience</fullName>
            </value>
            <value>
                <fullName>Prior experience with Brightcove (didn&#39;t consider alternatives)</fullName>
            </value>
            <value>
                <fullName>Reliability/Scalability/Customer Support</fullName>
            </value>
            <value>
                <fullName>Salesforce Correction</fullName>
            </value>
            <value>
                <fullName>Similar solution, not the best price</fullName>
            </value>
            <value>
                <fullName>Similar solution, won on price</fullName>
            </value>
            <value>
                <fullName>Solution completeness</fullName>
            </value>
            <value>
                <fullName>Too difficult to onboard or switch from existing solution</fullName>
            </value>
            <value>
                <fullName>Trusted sales advisor</fullName>
            </value>
            <value>
                <fullName>Unable to come to legal or contractual terms</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>