unpackaged/main/default/objects/Opportunity/fields/Subscription_Types__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Types__c</fullName>
    <label>Subscription Types</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Audience Insight only (Formerly Wickedlabs)</fullName>
            </value>
            <value>
                <fullName>AWS Marketplace</fullName>
            </value>
            <value>
                <fullName>Beacon Advantage</fullName>
            </value>
            <value>
                <fullName>Beacon Essential</fullName>
            </value>
            <value>
                <fullName>Brightcove Elite</fullName>
            </value>
            <value>
                <fullName>Brightcove One time event</fullName>
            </value>
            <value>
                <fullName>Campaign</fullName>
            </value>
            <value>
                <fullName>Engage</fullName>
            </value>
            <value>
                <fullName>Enterprise video Suite 2.0 Enterprise</fullName>
            </value>
            <value>
                <fullName>Enterprise video Suite 2.0 Starter</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Interactivity only (formerly Hapyak)</fullName>
            </value>
            <value>
                <fullName>Legacy Enterprise package</fullName>
            </value>
            <value>
                <fullName>Legacy Professional Package</fullName>
            </value>
            <value>
                <fullName>Legacy Pro-Start package</fullName>
            </value>
            <value>
                <fullName>Marketing Studio</fullName>
            </value>
            <value>
                <fullName>Master License Agreement</fullName>
            </value>
            <value>
                <fullName>OTT Flow</fullName>
            </value>
            <value>
                <fullName>Perform Player</fullName>
            </value>
            <value>
                <fullName>SOW</fullName>
            </value>
            <value>
                <fullName>Statement of Work</fullName>
            </value>
            <value>
                <fullName>VE Business</fullName>
            </value>
            <value>
                <fullName>Video Cloud Advantage</fullName>
            </value>
            <value>
                <fullName>Video Cloud Elite</fullName>
            </value>
            <value>
                <fullName>Video Cloud Essential</fullName>
            </value>
            <value>
                <fullName>Video Cloud Ultimate</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite</fullName>
            </value>
            <value>
                <fullName>Video Marketing suite Enterprise Edition</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite Professional Edition</fullName>
            </value>
            <value>
                <fullName>Video Marketing Suite Starter and Starter Plus</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>