unpackaged/main/default/objects/Opportunity/fields/TCV__c.field-meta.xml
<CustomField>
    <fullName>TCV__c</fullName>
    <formula>If( and (OR(ISPICKVAL(StageName, &quot;closed won&quot;),ISPICKVAL(StageName, &quot;closed lost&quot;)),CloseDate &lt; DATE(2023,04,15)) ,Legacy_TCV__c,
IF(NOT(ISBLANK(SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c))&amp;&amp;SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c &gt;1, SBQQ__PrimaryQuote__r.SBQQ__NetAmount__c,  

IF(NOT(ISBLANK(Manual_TCV__c))&amp;&amp; Manual_TCV__c &gt; 1, Manual_TCV__c, Legacy_TCV__c)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>