unpackaged/main/default/objects/Opportunity/fields/TCVH__c.field-meta.xml
<CustomField>
    <fullName>TCVH__c</fullName>
    <description>field Tracking for TCV-Mo</description>
    <label>TCV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>