unpackaged/main/default/objects/Opportunity/fields/Technical_Win__c.field-meta.xml
<CustomField>
    <fullName>Technical_Win__c</fullName>
    <defaultValue>false</defaultValue>
    <description>For the SE to mark if the solution has been completed or not.</description>
    <label>Technical Win</label>
    <type>Checkbox</type>
</CustomField>