unpackaged/main/default/objects/Opportunity/fields/Technology_Partner__c.field-meta.xml
<CustomField>
    <fullName>Technology_Partner__c</fullName>
    <description>SELECT ALL of the Technology Partners who you are working with or whose integration is part of the deal.</description>
    <label>Technology Partner</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Technology Partner</fullName>
            </value>
            <value>
                <fullName>3Play Media</fullName>
            </value>
            <value>
                <fullName>Accedo</fullName>
            </value>
            <value>
                <fullName>Adobe</fullName>
            </value>
            <value>
                <fullName>Annoto</fullName>
            </value>
            <value>
                <fullName>Apple Fairplay</fullName>
            </value>
            <value>
                <fullName>Aprimo</fullName>
            </value>
            <value>
                <fullName>Automatic Sync Tech</fullName>
            </value>
            <value>
                <fullName>Aveq gmbH</fullName>
            </value>
            <value>
                <fullName>Blackbird</fullName>
            </value>
            <value>
                <fullName>BlueRush</fullName>
            </value>
            <value>
                <fullName>CaptionHub</fullName>
            </value>
            <value>
                <fullName>CatapultX</fullName>
            </value>
            <value>
                <fullName>Cisco (WebEX)</fullName>
            </value>
            <value>
                <fullName>Cleeng</fullName>
            </value>
            <value>
                <fullName>CLIPr</fullName>
            </value>
            <value>
                <fullName>Curriki</fullName>
            </value>
            <value>
                <fullName>Drupal</fullName>
            </value>
            <value>
                <fullName>EMAM</fullName>
            </value>
            <value>
                <fullName>Evergent</fullName>
            </value>
            <value>
                <fullName>Facebook (Meta)</fullName>
            </value>
            <value>
                <fullName>Freewheel</fullName>
            </value>
            <value>
                <fullName>Glide Publishing Platform</fullName>
            </value>
            <value>
                <fullName>Google</fullName>
            </value>
            <value>
                <fullName>Grabyo</fullName>
            </value>
            <value>
                <fullName>Hootsuite</fullName>
            </value>
            <value>
                <fullName>Hubspot</fullName>
            </value>
            <value>
                <fullName>InPlayer</fullName>
            </value>
            <value>
                <fullName>Interprefy</fullName>
            </value>
            <value>
                <fullName>Inthegame</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>