unpackaged/main/default/objects/Opportunity/fields/Termination_Type__c.field-meta.xml
<CustomField>
    <fullName>Termination_Type__c</fullName>
    <label>Termination Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Non-Renewal</fullName>
            </value>
            <value>
                <fullName>Account Termination</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>