unpackaged/main/default/objects/Opportunity/fields/Test_Boolean__c.field-meta.xml
<CustomField>
    <fullName>Test_Boolean__c</fullName>
    <formula>NOT(ISNULL(Manual_ACV__c)) &amp;&amp; Manual_ACV__c &gt; 0</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Test Boolean</label>
    <type>Checkbox</type>
</CustomField>