unpackaged/main/default/objects/Opportunity/fields/Total_ACV_Admin__c.field-meta.xml
<CustomField>
    <fullName>Total_ACV_Admin__c</fullName>
    <label>ACV Admin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>