unpackaged/main/default/objects/Opportunity/fields/Total_CCV__c.field-meta.xml
<CustomField>
    <fullName>Total_CCV__c</fullName>
    <description>this field is only needed for testing fusion and should never be deployed to production</description>
    <label>Total CCV</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>