unpackaged/main/default/objects/Opportunity/fields/Total_Deal_Term__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Term__c</fullName>
    <formula>Pub_Contract_Terms_months__c +  Pub_Contract_Terms_Y2_months__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Deal Term (in months)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>