unpackaged/main/default/objects/Opportunity/fields/Total_Deal_Value__c.field-meta.xml
<CustomField>
    <fullName>Total_Deal_Value__c</fullName>
    <formula>BC_Consulting_Value__c + X3rd_Party_CDN_Integration__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>BGS Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>