unpackaged/main/default/objects/Opportunity/fields/Trial_Account_Id__c.field-meta.xml
<CustomField>
    <fullName>Trial_Account_Id__c</fullName>
    <label>Trial Account Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>