unpackaged/main/default/objects/Opportunity/fields/USD_Existing_MRR__c.field-meta.xml
<CustomField>
    <fullName>USD_Existing_MRR__c</fullName>
    <label>USD Existing MRR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>