unpackaged/main/default/objects/Opportunity/fields/USD_MRR_Commit__c.field-meta.xml
<CustomField>
    <fullName>USD_MRR_Commit__c</fullName>
    <label>USD MRR Commit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>