unpackaged/main/default/objects/Opportunity/fields/USD_Total_ACV__c.field-meta.xml
<CustomField>
    <fullName>USD_Total_ACV__c</fullName>
    <label>USD Total ACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>