unpackaged/main/default/objects/Opportunity/fields/Value_Proposition__c.field-meta.xml
<CustomField>
    <fullName>Value_Proposition__c</fullName>
    <inlineHelpText>What is our irresistible Value Proposition(s) that will compel the Customer to do a Deal quickly?</inlineHelpText>
    <label>Value Proposition</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>