unpackaged/main/default/objects/Opportunity/fields/Welcome_Email_Sent__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Email_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Welcome Email Sent to Customer Team?</description>
    <inlineHelpText>Welcome Email Sent to Customer Team?</inlineHelpText>
    <label>Welcome Email Sent</label>
    <type>Checkbox</type>
</CustomField>