unpackaged/main/default/objects/Opportunity/fields/Won_Lost_Against__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Against__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Won/Lost Against</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.Name</field>
            <operation>equals</operation>
            <value>Competitor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Won/Lost Against)</relationshipLabel>
    <relationshipName>Opportunities_WonLost_Against</relationshipName>
    <type>Lookup</type>
</CustomField>