unpackaged/main/default/objects/Opportunity/fields/Won_Lost_Story__c.field-meta.xml
<CustomField>
    <fullName>Won_Lost_Story__c</fullName>
    <label>Won/Lost Story</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>