unpackaged/main/default/objects/Opportunity/fields/X3rd_Party_CDN_Integration__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_CDN_Integration__c</fullName>
    <label>BGS Gap Closer Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>