unpackaged/main/default/objects/Opportunity/fields/X6sense_Stage_Consideration__c.field-meta.xml
<CustomField>
    <fullName>X6sense_Stage_Consideration__c</fullName>
    <label>6sense Stage – Consideration</label>
    <type>Date</type>
</CustomField>