unpackaged/main/default/objects/Opportunity/fields/xPipeline_Status__c.field-meta.xml
<CustomField>
    <fullName>xPipeline_Status__c</fullName>
    <inlineHelpText>Created by Sadhana Team. Deprecated field we had to replicate to migrate reports and report types</inlineHelpText>
    <label>xPipeline Status</label>
    <length>1</length>
    <type>Text</type>
</CustomField>