unpackaged/main/default/objects/Opportunity/recordTypes/Add_On.recordType-meta.xml
<RecordType>
    <fullName>Add_On</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <description>System generated Opportunity used when an existing Contract is Amended</description>
    <label>Add-On</label>
</RecordType>