unpackaged/main/default/objects/Opportunity/recordTypes/Customer_Experience_Request.recordType-meta.xml
<RecordType>
    <fullName>Customer_Experience_Request</fullName>
    <active>true</active>
    <businessProcess>Standard Sales Process</businessProcess>
    <label>Customer Experience Request</label>
</RecordType>